# alpide_soft

./: CMakeLists.txt  README.md
cmake/: alpideConfig.cmake.in  alpideConfigVersion.cmake.in
conf/: alpide.json  alpide2345.ini  mimosa_alpide.conf  mimosa_alpide.ini  startup_tlu_mimosa_alpide.sh
cpp/: CMakeLists.txt
cpp/RBCP/: CMakeLists.txt  rbcp.c  rbcp_com.c  rbcp_com.h
cpp/altel/: CMakeLists.txt
cpp/altel/exe/: CMakeLists.txt
cpp/altel/exe/src/: .AlpideRegCtrl.cxx.swp  AlpideRegCtrl.cxx  AlpideTest.cxx  alpide_change_ip.cxx
cpp/altel/register/: .gitignore  AlpideRegManager.cc  AltelReader.cc  AltelReader.hh  AltelRegCtrl_replaced.cc  CMakeLists.txt  FirmwarePortal.cc  FirmwarePortal.hh  FirmwarePortal_main.cc  JadeDataFrame.cc  JadeDataFrame.hh  Telescope.cc  Telescope.hh  minimal-ws-server-threadpool.cc  mysystem.hh  opengl_main.cc  rbcp.cc  rbcp.h  reg1.json  run_tlu.sh  telescope_main.cc  websockets_main.cc
cpp/altel/register/aidatlu/: CMakeLists.txt
cpp/altel/register/aidatlu/cmake/: aidatluConfig.cmake.in
cpp/altel/register/aidatlu/exe/: AidaTluController.cxx  CMakeLists.txt  tlu_test_main.cxx
cpp/altel/register/aidatlu/include/: AidaTluController.hh
cpp/altel/register/aidatlu/src/: AidaTluController.cc  AidaTluHardware.cc
cpp/altel/register/backup/rbcp/: rbcp.cc  rbcp.h
cpp/altel/register/common/: CMakeLists.txt  mysystem.cmake  mysystem.hh
cpp/altel/register/common/base64/: base64.cc  base64.hh
cpp/altel/register/gl/: CMakeLists.txt  my_telescope_gl.cc
cpp/altel/register/gl/include/: TelescopeGL.hh
cpp/altel/register/gl/src/: TelescopeGL.cc  TelescopeGL_shaders.cc
cpp/altel/register/jsonfile/: reg_cmd_list.json
cpp/altel/register/mount-origin/: colorblocks.js  example.js  index.html  index_temp.html  index_ws.html  style.css
cpp/altel/register/mount-origin/js/: openTAB.js
cpp/altel/register/rbcp/: CMakeLists.txt  README  rbcp.cc  rbcp_main.cc
cpp/altel/register/telescope/exe/: FirmwarePortal_main.cc  telescope_main.cc
cpp/altel/register/telescope/include/: FirmwarePortal.hh
cpp/altel/register/telescope/src/: AltelReader.cc
cpp/altel/register/web/: CMakeLists.txt  websockets_main.cc
cpp/altel/src/: AltelManager.cc  AltelReader.cc  AltelRegCtrl.cc  AltelWriter.cc
cpp/conf/: alpide_0.json  alpide_1.json  alpide_test.json  eudet_one-DC.conf  example.json  reg.json  tlu_and_alpidex2_onedc.conf  tlu_and_alpidex2_onedc.ini
cpp/eudaq/: CMakeLists.txt
cpp/eudaq/exe/: CMakeLists.txt  alpide_noise_ratio.cxx  alpide_pickup.cxx  alpide_trigger_print.cxx  alpide_valid_ratio.cxx
cpp/eudaq/misc/: 05_eudet_tlu_all_alpide  eudet_one-DC.conf  telescope.ini
cpp/eudaq/src/: AlpideDataCollecor.cc  EudaqWriter_v1.cc  EudaqWriter_v2.cc  EudaqWriter_v3.cc  EudaqWriter_v4.cc  JadeProducer.cc  JadeRawEvent2LCEventConverter.cc  JadeRawEvent2StdEventConverter.cc  TriggerIDSyncDataCollecor.cc  UsbpixI4RawEvent2LCEventConverter.cc  UsbpixI4RawEvent2StdEventConverter.cc
cpp/eudaq/src/fei4/: UsbpixI4RawEvent2LCEventConverter.cc  UsbpixI4RawEvent2StdEventConverter.cc
cpp/jade/: CMakeLists.txt
cpp/jade/exe/src/: ReaderTest.cxx  SystemTest.cxx  main.cc
cpp/jade/include/: JadeDataFrame.hh  JadeFactory.hh  JadeManager.hh  JadeReader.hh  JadeRegCtrl.hh  JadeSystem.hh  JadeUtils.hh  getopt.h
cpp/jade/src/: AltelReader.cc  AltelRegCtrl.cc  JadeDataFrame.cc  JadeManager.cc  JadeOption.cc  JadeReader.cc  JadeUtils.cc  getopt.c
doc/: build.sh
python/: alpietest.py  alpietestnew.py  functions.py  functionsnew.py
